# gmod-lcpu

./: .clang-format  .editorconfig  .gitignore  .gitmodules  Containerfile.llvm  LICENSE  README.md  build_llvm.sh  build_module.sh  ideas.md
lua/autorun/: lcpu_load.lua
lua/entities/: gmod_lcpu_cpu.lua
lua/lcpu/: cvars.lua  models.lua  upload_lib.lua
lua/lcpu/devices/: gmlua_test.lua  uart.lua  wire_interface.lua
lua/weapons/gmod_tool/stools/: lcpu.lua
lua/wire/stools/: lcpu.lua
native/: CMakeLists.txt
native/cmake/: linux32-toolchain.cmake
native/lucore/: CMakeLists.txt
native/lucore/include/lucore/: Assert.hpp  OptionalRef.hpp
native/lucore/src/: Assert.cpp
native/projects/gmsv_lcpu_native/: CMakeLists.txt  NOTES.md
native/projects/lcpu/: CMakeLists.txt  gmod_headers.cmake
native/projects/lcpu/src/: LcpuGlobals.cpp  LcpuGlobals.hpp  LuaCpu.cpp  LuaCpu.hpp  LuaDevice.cpp  LuaDevice.hpp  LuaHelpers.hpp  LuaMember.hpp  LuaObject.hpp  LuaShared.cpp  LuaShared.hpp  LuaSharedFunctions.inc  SourceSink.cpp  SourceSink.hpp  main.cpp
native/projects/lucore/: CMakeLists.txt
native/projects/lucore/include/lucore/: Assert.hpp  Library.hpp  Logger.hpp  OptionalRef.hpp  StdoutSink.hpp  Types.hpp
native/projects/lucore/src/: Assert.cpp  Library.cpp  Logger.cpp  OsLibrary.cpp  OsLibrary.hpp  OsLibrary.linux.cpp  OsLibrary.win32.cpp  StdoutSink.cpp
native/projects/lucore_test/: CMakeLists.txt  main.cpp
native/projects/projgen/: CMakeLists.txt
native/projects/projgen/src/: BaseConfig.hpp  FsUtils.hpp  Makefile.hpp  Project.hpp  main.cpp
native/projects/riscv/: CMakeLists.txt  README.md
native/projects/riscv/include/riscv/: Bus.hpp  CPU.hpp  CPUTypes.hpp  System.hpp  Types.hpp
native/projects/riscv/include/riscv/Devices/: ClntDevice.hpp  RamDevice.hpp  SysconDevice.hpp
native/projects/riscv/src/: Bus.cpp  CPU.cpp  MemoryDevice.cpp  System.cpp
native/projects/riscv/src/Devices/: ClntDevice.cpp  RamDevice.cpp  SysconDevice.cpp
native/projects/riscv_test_harness/: CMakeLists.txt  main.cpp
native/projects/riscv_test_harness/test/: Makefile  README.md  binary.ld  main.c
native/riscv/: CMakeLists.txt
native/riscv/include/riscv/: Bus.hpp  CPU.hpp  Types.hpp
native/riscv/src/: Bus.cpp  MemoryDevice.cpp
scripts/: build_llvm.sh
test-gmod/: main.c  project.json  start.S
